--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-native-svg": "^15.9.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.4"
+    "react-native-webview": "13.12.4",
+    "expo-image": "~2.0.2",
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
